--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,13 @@
     <string name="out">회원탈퇴</string>
     <string name="edit_my_information">회원정보 수정</string>
     <string name="edit">수정하기</string>
+    <string name="schedule">일정</string>
+    <string name="no_schedule">일정이 없습니다</string>
+    <string name="enrollment">등록하기</string>
+    <string name="search">검색하기</string>
+    <string name="previous">&lt;prev</string>
+    <string name="next">next&gt;</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
